# FundyWise

./: .gitignore  README.md  concept.md  docker-compose.yml  introduce.md  optimization.md
algorithm/: CMakeLists.txt  README.md
algorithm/bindings/: pybind_wrapper.cpp
algorithm/cpp/: debt_optimizer.cpp  debt_optimizer.h  models.h  tests.cpp
algorithm/python/: optimizer.py
backend/: .env.example  README.md  render.yaml  requirements.txt
backend/app/: main.py
backend/app/api/: expenses.py  groups.py  settlement.py  users.py
backend/app/core/: security.py
backend/app/db/: database.py  models.py
backend/app/schemas/: expense.py  group.py  settlement.py  user.py
backend/app/services/: expense_service.py  group_service.py  settlement_service.py
docs/: api-spec.md  database-schema.md
docs/docs/: database_schema.sql
mobile-app/: App.tsx  app.json  package-lock.json  package.json
mobile-app/src/components/: ExpenseCard.tsx  MemberChip.tsx  PrimaryButton.tsx  SettlementCard.tsx
mobile-app/src/constants/: colors.ts
mobile-app/src/navigation/: AppNavigator.tsx  AuthNavigator.tsx
mobile-app/src/screens/: AddExpenseScreen.tsx  CreateGroupScreen.tsx  GroupDetailsScreen.tsx  GroupScreen.tsx  GroupsListScreen.tsx  HomeScreen.tsx  LoginScreen.tsx  RegisterScreen.tsx  SelectMembersScreen.tsx  SettlementScreen.tsx
mobile-app/src/services/: api.ts  supabase.ts
mobile-app/src/types/: models.ts
scripts/: README.md
